--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/littledata/rss-generator.git"
+    "url": "git+https://github.com/littledata/rss-generator.git"
   },
   "bugs": {
     "url": "https://github.com/littledata/rss-generator/issues"
