--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
       - run:
           name: Authenticate with registry
           command: echo "//npm.pkg.github.com/:_authToken=$NPM_TOKEN" >> ./.npmrc
-      - node/install-packages
+      - run: yarn install
       - save_cache:
           key: deps-{{ checksum "yarn.lock" }}
           paths:
@@ -37,9 +37,6 @@ jobs:
       - restore_cache:
           keys:
             - deps-{{ checksum "yarn.lock" }}
-      - run:
-          name: build
-          command: npm run build
       - run:
           name: Authenticate with registry
           command: echo "//npm.pkg.github.com/:_authToken=$NPM_TOKEN" >> ./.npmrc
